--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -5,7 +5,8 @@
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -20,485 +21,585 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+.icon-periscope:before {
+  content: '\e9ba';
+}
+.icon-windows:before {
+  content: '\e9b9';
+}
+.icon-back-alt:before {
+  content: '\e9a0';
+}
+.icon-desktop:before {
+  content: '\e9a1';
+}
+.icon-education:before {
+  content: '\e9a2';
+}
+.icon-bold:before {
+  content: '\e9a3';
+}
+.icon-four-columns-25-25-25-25:before {
+  content: '\e9a4';
+}
+.icon-italic:before {
+  content: '\e9a5';
+}
+.icon-menu:before {
+  content: '\e9a6';
+}
+.icon-facebook:before {
+  content: '\e9a7';
+}
+.icon-mixer:before {
+  content: '\e9a8';
+}
+.icon-one-column:before {
+  content: '\e9a9';
+}
+.icon-phone:before {
+  content: '\e9aa';
+}
+.icon-picarto:before {
+  content: '\e9ab';
+}
+.icon-strike:before {
+  content: '\e9ac';
+}
+.icon-tablet:before {
+  content: '\e9ad';
+}
+.icon-three-columns-25-25-50:before {
+  content: '\e9ae';
+}
+.icon-three-columns-25-50-25:before {
+  content: '\e9af';
+}
+.icon-three-columns-33-33-33:before {
+  content: '\e9b0';
+}
+.icon-three-columns-50-25-25:before {
+  content: '\e9b1';
+}
+.icon-two-columns-25-75:before {
+  content: '\e9b2';
+}
+.icon-two-columns-33-66:before {
+  content: '\e9b3';
+}
+.icon-two-columns-50-50:before {
+  content: '\e9b4';
+}
+.icon-two-columns-66-33:before {
+  content: '\e9b5';
+}
+.icon-two-columns-75-25:before {
+  content: '\e9b6';
+}
+.icon-underline:before {
+  content: '\e9b7';
+}
+.icon-youtube:before {
+  content: '\e9b8';
+}
 .icon-translation:before {
-  content: "\e995";
+  content: '\e995';
 }
 .icon-all-over:before {
-  content: "\e994";
+  content: '\e994';
 }
 .icon-list-view:before {
-  content: "\e98f";
+  content: '\e98f';
 }
 .icon-smart-view-2:before {
-  content: "\e990";
+  content: '\e990';
 }
 .icon-smart-view-3:before {
-  content: "\e991";
+  content: '\e991';
 }
 .icon-smart-view-4:before {
-  content: "\e992";
+  content: '\e992';
 }
 .icon-smart-view:before {
-  content: "\e993";
+  content: '\e993';
 }
 .icon-developer:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-download:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-media-share-3:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-expand-1:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-media-share-2:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-prize:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-bag:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-pillow:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-editor:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-fit:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-phone-case:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-cut-sew:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-mug:before {
-  content: "\e90c";
+  content: '\e90c';
 }
 .icon-upperwear:before {
-  content: "\e90d";
+  content: '\e90d';
 }
 .icon-canvas:before {
-  content: "\e90e";
+  content: '\e90e';
 }
 .icon-framed-poster:before {
-  content: "\e90f";
+  content: '\e90f';
 }
 .icon-poster:before {
-  content: "\e910";
+  content: '\e910';
 }
 .icon-cloud-backup-2:before {
-  content: "\e911";
+  content: '\e911';
 }
 .icon-cloud-backup:before {
-  content: "\e912";
+  content: '\e912';
 }
 .icon-cloud:before {
-  content: "\e913";
+  content: '\e913';
 }
 .icon-check-mark:before {
-  content: "\e914";
+  content: '\e914';
 }
 .icon-upload-image:before {
-  content: "\e915";
+  content: '\e915';
 }
 .icon-studio-mode-4:before {
-  content: "\e916";
+  content: '\e916';
 }
 .icon-studio-mode-2:before {
-  content: "\e917";
+  content: '\e917';
 }
 .icon-studio-mode-3:before {
-  content: "\e918";
+  content: '\e918';
 }
 .icon-studio-mode:before {
-  content: "\e919";
+  content: '\e919';
 }
 .icon-dashboard:before {
-  content: "\e91a";
+  content: '\e91a';
 }
 .icon-discord:before {
-  content: "\e91b";
+  content: '\e91b';
 }
 .icon-badge:before {
-  content: "\e91c";
+  content: '\e91c';
 }
 .icon-camera-off:before {
-  content: "\e91d";
+  content: '\e91d';
 }
 .icon-camera:before {
-  content: "\e91e";
+  content: '\e91e';
 }
 .icon-pause:before {
-  content: "\e91f";
+  content: '\e91f';
 }
 .icon-skip:before {
-  content: "\e920";
+  content: '\e920';
 }
 .icon-add-folder:before {
-  content: "\e921";
+  content: '\e921';
 }
 .icon-store:before {
-  content: "\e922";
+  content: '\e922';
 }
 .icon-image:before {
-  content: "\e923";
+  content: '\e923';
 }
 .icon-group:before {
-  content: "\e924";
+  content: '\e924';
 }
 .icon-treat:before {
-  content: "\e925";
+  content: '\e925';
 }
 .icon-leaderboard-2:before {
-  content: "\e926";
+  content: '\e926';
 }
 .icon-leaderboard-3:before {
-  content: "\e927";
+  content: '\e927';
 }
 .icon-leaderboard:before {
-  content: "\e928";
+  content: '\e928';
 }
 .icon-crop:before {
-  content: "\e929";
+  content: '\e929';
 }
 .icon-move:before {
-  content: "\e92a";
+  content: '\e92a';
 }
 .icon-down:before {
-  content: "\e92b";
+  content: '\e92b';
 }
 .icon-back:before {
-  content: "\e92c";
+  content: '\e92c';
 }
 .icon-more:before {
-  content: "\e92d";
+  content: '\e92d';
 }
 .icon-donation-settings:before {
-  content: "\e92e";
+  content: '\e92e';
 }
 .icon-share:before {
-  content: "\e92f";
+  content: '\e92f';
 }
 .icon-link:before {
-  content: "\e930";
+  content: '\e930';
 }
 .icon-trash:before {
-  content: "\e931";
+  content: '\e931';
 }
 .icon-face-masks:before {
-  content: "\e932";
+  content: '\e932';
 }
 .icon-reset:before {
-  content: "\e933";
+  content: '\e933';
 }
 .icon-repeat:before {
-  content: "\e934";
+  content: '\e934';
 }
 .icon-multistream:before {
-  content: "\e935";
+  content: '\e935';
 }
 .icon-stop-recording:before {
-  content: "\e936";
+  content: '\e936';
 }
 .icon-record:before {
-  content: "\e937";
+  content: '\e937';
 }
 .icon-playing:before {
-  content: "\e938";
+  content: '\e938';
 }
 .icon-music:before {
-  content: "\e939";
+  content: '\e939';
 }
 .icon-jar:before {
-  content: "\e93a";
+  content: '\e93a';
 }
 .icon-webcam:before {
-  content: "\e93b";
+  content: '\e93b';
 }
 .icon-integrations:before {
-  content: "\e93c";
+  content: '\e93c';
 }
 .icon-guild:before {
-  content: "\e93d";
+  content: '\e93d';
 }
 .icon-pop-out-1:before {
-  content: "\e93e";
+  content: '\e93e';
 }
 .icon-pop-out-2:before {
-  content: "\e93f";
+  content: '\e93f';
 }
 .icon-expand:before {
-  content: "\e940";
+  content: '\e940';
 }
 .icon-reduce-screen-alt:before {
-  content: "\e941";
+  content: '\e941';
 }
 .icon-reduce-screen:before {
-  content: "\e942";
+  content: '\e942';
 }
 .icon-full-screen-alt:before {
-  content: "\e943";
+  content: '\e943';
 }
 .icon-resize-vertical:before {
-  content: "\e944";
+  content: '\e944';
 }
 .icon-resize-horizontal:before {
-  content: "\e945";
+  content: '\e945';
 }
 .icon-align-center-vertical:before {
-  content: "\e946";
+  content: '\e946';
 }
 .icon-align-center-horizontal:before {
-  content: "\e947";
+  content: '\e947';
 }
 .icon-resize:before {
-  content: "\e948";
+  content: '\e948';
 }
 .icon-full-screen:before {
-  content: "\e949";
+  content: '\e949';
 }
 .icon-pop-out-3:before {
-  content: "\e94a";
+  content: '\e94a';
 }
 .icon-earnings:before {
-  content: "\e94b";
+  content: '\e94b';
 }
 .icon-error:before {
-  content: "\e94c";
+  content: '\e94c';
 }
 .icon-information:before {
-  content: "\e94d";
+  content: '\e94d';
 }
 .icon-question:before {
-  content: "\e94e";
+  content: '\e94e';
 }
 .icon-text:before {
-  content: "\e94f";
+  content: '\e94f';
 }
 .icon-zoom:before {
-  content: "\e950";
+  content: '\e950';
 }
 .icon-search:before {
-  content: "\e951";
+  content: '\e951';
 }
 .icon-loyalty-1:before {
-  content: "\e952";
+  content: '\e952';
 }
 .icon-add-circle:before {
-  content: "\e953";
+  content: '\e953';
 }
 .icon-remove-circle:before {
-  content: "\e954";
+  content: '\e954';
 }
 .icon-studio:before {
-  content: "\e955";
+  content: '\e955';
 }
 .icon-close:before {
-  content: "\e956";
+  content: '\e956';
 }
 .icon-add:before {
-  content: "\e957";
+  content: '\e957';
 }
 .icon-subtract:before {
-  content: "\e958";
+  content: '\e958';
 }
 .icon-stats:before {
-  content: "\e959";
+  content: '\e959';
 }
 .icon-filter:before {
-  content: "\e95a";
+  content: '\e95a';
 }
 .icon-announcement:before {
-  content: "\e95b";
+  content: '\e95b';
 }
 .icon-notifications:before {
-  content: "\e95c";
+  content: '\e95c';
 }
 .icon-graph:before {
-  content: "\e95d";
+  content: '\e95d';
 }
 .icon-integrations-2:before {
-  content: "\e95e";
+  content: '\e95e';
 }
 .icon-platforms:before {
-  content: "\e95f";
+  content: '\e95f';
 }
 .icon-logout:before {
-  content: "\e960";
+  content: '\e960';
 }
 .icon-transition:before {
-  content: "\e961";
+  content: '\e961';
 }
 .icon-copy:before {
-  content: "\e962";
+  content: '\e962';
 }
 .icon-balance:before {
-  content: "\e963";
+  content: '\e963';
 }
 .icon-team-2:before {
-  content: "\e964";
+  content: '\e964';
 }
 .icon-team:before {
-  content: "\e965";
+  content: '\e965';
 }
 .icon-user:before {
-  content: "\e966";
+  content: '\e966';
 }
 .icon-hide:before {
-  content: "\e967";
+  content: '\e967';
 }
 .icon-view:before {
-  content: "\e968";
+  content: '\e968';
 }
 .icon-cpu:before {
-  content: "\e969";
+  content: '\e969';
 }
 .icon-hide-video:before {
-  content: "\e96a";
+  content: '\e96a';
 }
 .icon-mic:before {
-  content: "\e96b";
+  content: '\e96b';
 }
 .icon-mute-mic:before {
-  content: "\e96c";
+  content: '\e96c';
 }
 .icon-stream:before {
-  content: "\e96d";
+  content: '\e96d';
 }
 .icon-output:before {
-  content: "\e96e";
+  content: '\e96e';
 }
 .icon-mute:before {
-  content: "\e96f";
+  content: '\e96f';
 }
 .icon-audio:before {
-  content: "\e970";
+  content: '\e970';
 }
 .icon-media-share:before {
-  content: "\e971";
+  content: '\e971';
 }
 .icon-hotkeys:before {
-  content: "\e972";
+  content: '\e972';
 }
 .icon-advanced:before {
-  content: "\e973";
+  content: '\e973';
 }
 .icon-widgets:before {
-  content: "\e974";
+  content: '\e974';
 }
 .icon-overview:before {
-  content: "\e975";
+  content: '\e975';
 }
 .icon-wish-list:before {
-  content: "\e976";
+  content: '\e976';
 }
 .icon-themes:before {
-  content: "\e977";
+  content: '\e977';
 }
 .icon-settings:before {
-  content: "\e978";
+  content: '\e978';
 }
 .icon-card-set:before {
-  content: "\e979";
+  content: '\e979';
 }
 .icon-alert-box:before {
-  content: "\e97a";
+  content: '\e97a';
 }
 .icon-check:before {
-  content: "\e97b";
+  content: '\e97b';
 }
 .icon-stream-labels:before {
-  content: "\e97c";
+  content: '\e97c';
 }
 .icon-donation-ticker:before {
-  content: "\e97d";
+  content: '\e97d';
 }
 .icon-chat-box:before {
-  content: "\e97e";
+  content: '\e97e';
 }
 .icon-live-dashboard:before {
-  content: "\e97f";
+  content: '\e97f';
 }
 .icon-event-list:before {
-  content: "\e980";
+  content: '\e980';
 }
 .icon-loyalty:before {
-  content: "\e981";
+  content: '\e981';
 }
 .icon-edit:before {
-  content: "\e982";
+  content: '\e982';
 }
 .icon-extra-life:before {
-  content: "\e983";
+  content: '\e983';
 }
 .icon-community:before {
-  content: "\e984";
+  content: '\e984';
 }
 .icon-suggestions:before {
-  content: "\e985";
+  content: '\e985';
 }
 .icon-lock-2:before {
-  content: "\e986";
+  content: '\e986';
 }
 .icon-unlock:before {
-  content: "\e987";
+  content: '\e987';
 }
 .icon-lock:before {
-  content: "\e988";
+  content: '\e988';
 }
 .icon-settings-3-1:before {
-  content: "\e989";
+  content: '\e989';
 }
 .icon-time:before {
-  content: "\e98a";
+  content: '\e98a';
 }
 .icon-settings-3:before {
-  content: "\e98b";
+  content: '\e98b';
 }
 .icon-settings-2:before {
-  content: "\e98c";
+  content: '\e98c';
 }
 .icon-delete:before {
-  content: "\e98d";
+  content: '\e98d';
 }
 .icon-date:before {
-  content: "\e98e";
+  content: '\e98e';
 }
 .icon-dropdown:before {
-  content: "\e996";
+  content: '\e996';
 }
 .icon-save:before {
-  content: "\e997";
+  content: '\e997';
 }
 .icon-cart-2:before {
-  content: "\e998";
+  content: '\e998';
 }
 .icon-cart:before {
-  content: "\e999";
+  content: '\e999';
 }
 .icon-date-range:before {
-  content: "\e99a";
+  content: '\e99a';
 }
 .icon-leaderboard-4:before {
-  content: "\e99b";
+  content: '\e99b';
 }
 .icon-leaderboard-5:before {
-  content: "\e99c";
+  content: '\e99c';
 }
 .icon-unitpay:before {
-  content: "\e99d";
+  content: '\e99d';
 }
 .icon-skrill:before {
-  content: "\e99e";
+  content: '\e99e';
 }
-
+.icon-moustache:before {
+  content: '\e99f';
+}
+.icon-kevin-night:before {
+  content: '\e9bb';
+}
+.icon-kevin-day:before {
+  content: '\e9bc';
+}
+.icon-cloudbot:before {
+  content: '\e9bd';
+}
+.icon-empty:before {
+  content: '\e9be';
+}
+.icon-face-masks-2:before {
+  content: '\e9bf';
+}
+.icon-face-masks-3:before {
+  content: '\e9c0';
+}
 
 // rule to rotate arrow
 .icon-down.icon-right {
