Rework to use var

--- a/app/app.g.less
+++ b/app/app.g.less
@@ -268,13 +268,12 @@ a,
 .tab-button {
   background-color: transparent;
   border: 0;
-  border-bottom: 2px solid transparent;
   height: 48px;
   .margin-right(2);
   .link--capitalize();
 
   &:hover {
-    border-bottom-color: @dark-2;
+    border-bottom: 2px solid var(--nav-border);
   }
   &:focus {
     outline: 0;
