--- a/app/app.g.less
+++ b/app/app.g.less
@@ -268,6 +268,7 @@ a,
 .tab-button {
   background-color: transparent;
   border: 0;
+  border-bottom: 1px solid var(--border);
   height: 48px;
   .margin-right(2);
   .link--capitalize();
